@@ -125,8 +125,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 4.9.9-beta03
-@set doc-edition 4.9.9-beta03
+@set nco-edition 4.9.9-beta04
+@set doc-edition 4.9.9-beta04
 @set copyright-years 1995--2021
 @set update-year 2021
 @set update-date 12 May 2021
