@@ -4,6 +4,16 @@
 	cd ~/nco;git commit -a -m 'Version 4.9.9: Pfizer';git push
 	git tag -a 4.9.9 -m 'https DAP wnd; ncks chk_map msk_a/b dgn, msk no wrn min frac_a/b; ncclimo hfs mth_srt/end, nfr dpf, fix tpd; ncremap ccw_chk fix, msk fix, tr allow_no_overlap, rgr_wgt rint() int;';git push --tags
 
+2021-05-13  Charlie Zender  <zender@uci.edu>
+
+	* NCO 4.9.9-beta04 release procedure:
+	cd ~/nco;git commit -a -m 'Version 4.9.9-beta04: Gesundheit!';git push
+	git tag -a 4.9.9-beta04 -m 'https DAP wnd; ncks chk_map msk_a/b dgn, msk no wrn min frac_a/b; ncclimo hfs mth_srt/end, nfr dpf, fix tpd; ncremap ccw_chk fix, msk fix, tr allow_no_overlap, rgr_wgt rint() int;';git push --tags
+
+	* configure.ac change from autoconf-2.7.1 AC_PROG_LEX(yywrap) to 2.7.1 AC_PROG_LEX(noyywrap)
+
+	* nco-feedstock shift to libnetcdf 4.8.0
+
 2021-05-12  Charlie Zender  <zender@uci.edu>
 
 	* run_test.bat remove regex test from Conda Winows pipeline
